2009-09-03  Steve VanDeBogart  <vandebo@chromium.org>

Reviewed by Eric Seidel.

        Check that middle click triggers an onpaste event in Linux.
        https://bugs.webkit.org/show_bug.cgi?id=28696

        * platform/gtk/editing/pasteboard: Added.
        * platform/gtk/editing/pasteboard/middle-click-onpaste-expected.txt: Added.
        * platform/gtk/editing/pasteboard/resources: Added.
        * platform/gtk/editing/pasteboard/resources/TEMPLATE.html: Added.
        * platform/gtk/editing/pasteboard/resources/middle-click-onpaste.js: Added.
        (handlePaste):
2009-09-03  Steve VanDeBogart  <vandebo@chromium.org>

        Reviewed by Eric Seidel.

        Handle middle click in Chromium like QT
        https://bugs.webkit.org/show_bug.cgi?id=28696

        Tested by middle-click-onpaste.html.

        * platform/Pasteboard.h:
        * platform/chromium/ChromiumBridge.h:
        * platform/chromium/ClipboardChromium.cpp:
        (WebCore::ClipboardChromium::getData):
        * platform/chromium/PasteboardChromium.cpp:
        (WebCore::Pasteboard::Pasteboard):
        (WebCore::Pasteboard::isSelectionMode):
        (WebCore::Pasteboard::setSelectionMode):
        (WebCore::Pasteboard::canSmartReplace):
        (WebCore::Pasteboard::plainText):
        (WebCore::Pasteboard::documentFragment):
        * platform/chromium/PasteboardPrivate.h:
        (WebCore::PasteboardPrivate::):

git-svn-id: svn://svn.chromium.org/blink/trunk@48035 bbb929c8-8fbe-4397-9dbb-9b2b20218538