third_party/WebKit/WebCore/platform/chromium/PasteboardPrivate.h
@@ -42,6 +42,10 @@ namespace WebCore {
             BookmarkFormat,
             WebSmartPasteFormat,
         };
+        enum ClipboardBuffer {
+            StandardBuffer,
+            SelectionBuffer,
+        };
     };
 
 } // namespace WebCore
